
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-01-22 DP  1.6.3  Handle non-default schema paths properly in the Foreign
                      Key dialogue, per Philipp Specht
2007-01-19 DP  1.6.3  Fix localisation of 'Tab' as a copy delimiter.
2007-01-19 DP  1.8.0  Add options to enable/disable triggers, both individually
                      and per-table [Guillaume Lelarge, Dave Page]
2007-01-17 DP  1.6.3  Update to support the changed syntax of pg_dump 8.2+.
2007-01-15 DP  1.6.3  Add support for Sun's compiler [Dhanaraj M]
2007-01-12 DP  1.8.0  Use pg_stattuple (if available) to optionally display
                      additional table statistics on a per-table basis 
                      [Guillaume Lelarge, Dave Page]
2007-01-11 DP  1.8.0  Support for operators and op-classes in PostgreSQL 8.3.
2007-01-10 DP  1.6.3  Fix an issue in the Query Tool export option that could
                      result in blank lines in the export file, per Mathias 
                      Durst and Mike.
2007-01-09 DP  1.6.3  Truncate comments containing \r\n correctly, per Erwin.
2007-01-09 DP  1.6.3  Fix query tool title which was unfortunately broken by
                      an earlier fix for another bug.
2007-01-04 DP  1.6.2  Enable the OK button on the database properties dialog
                      when variables are changed.
2007-01-04 DP  1.6.2  Refresh database objects correctly, per Guy Rouillier.
2006-12-28 DP  1.8.0  Add a 'Run Now' options for pgAgent jobs.
2006-12-28 DP  1.8.0  Retain the clipboard contents on app exit.
2006-12-28 DP  1.8.0  Add an option to show NULLs as <NULL> in the Query Tool.
2006-12-28 DP  1.8.0  Remember last used save definition filename.