@@ -1,0 +1,62 @@
+/* XPM */
+static char * operatorfamilies_xpm[] = {
+"16 16 43 1",
+" 	c None",
+".	c #BABABA",
+"+	c #8F8F8F",
+"@	c #737373",
+"#	c #7F7F80",
+"$	c #AAABB0",
+"%	c #CDCFD7",
+"&	c #E3E7F1",
+"*	c #CACED7",
+"=	c #A6A9B0",
+"-	c #7D7E80",
+";	c #BEBFC6",
+">	c #E8EAF5",
+",	c #9A9C9F",
+"'	c #6F6F6F",
+")	c #7A7A7B",
+"!	c #727273",
+"~	c #7F8082",
+"{	c #767778",
+"]	c #CACDD5",
+"^	c #A0A2A6",
+"/	c #9EA1A6",
+"(	c #DFE7F4",
+"_	c #B6BCC5",
+":	c #E6EAF5",
+"<	c #E07554",
+"[	c #DDE6F4",
+"}	c #DBE5F3",
+"|	c #A2A7AF",
+"1	c #DD6B4F",
+"2	c #9A9FA5",
+"3	c #BFCAD5",
+"4	c #DA6048",
+"5	c #D65542",
+"6	c #D24A3B",
+"7	c #D1E0EE",
+"8	c #999FA5",
+"9	c #BBC8D5",
+"0	c #D4E3F2",
+"a	c #D1E2F2",
+"b	c #9DA6AE",
+"c	c #7B7D7F",
+"d	c #ADB9C4",
+"   .+@+.        ",
+"  #$%&*=-       ",
+" #;>,')!~{      ",
+".$>]#$%&*=-     ",
+"+%,#;>,')!~{    ",
+"@&'$>]#$%&*=-   ",
+"+*)%,#;>^'/(_-  ",
+".=!&'$>:'<'[}|. ",
+" -~*)%^''1''23+ ",
+"  {=!&'<1456'7@ ",
+"   -~*/''5''89+ ",
+"    {=(['6'0ab. ",
+"     c_}2'8adc  ",
+"      -|379bc   ",
+"       .+@+.    ",
+"                "};
