@@ -1,0 +1,83 @@
+/* XPM */
+static char * operatorfamily_xpm[] = {
+"16 16 64 1",
+" 	c None",
+".	c #B7B7B7",
+"+	c #939393",
+"@	c #797979",
+"#	c #C2C2C2",
+"$	c #88888B",
+"%	c #ACADB3",
+"&	c #C9CCD4",
+"*	c #DEE1EC",
+"=	c #DDE0EC",
+"-	c #C7CBD4",
+";	c #A9ACB2",
+">	c #86888A",
+",	c #B2B2B2",
+"'	c #A1A1A6",
+")	c #D5D7E0",
+"!	c #E7EAF5",
+"~	c #E6EAF5",
+"{	c #E5E9F5",
+"]	c #E4E9F5",
+"^	c #E2E8F5",
+"/	c #E1E8F4",
+"(	c #CDD3DE",
+"_	c #9C9FA5",
+":	c #E2E4EF",
+"<	c #A0A1A6",
+"[	c #6F6F6F",
+"}	c #9EA1A6",
+"|	c #DFE7F4",
+"1	c #DEE7F4",
+"2	c #D6DFED",
+"3	c #9B9FA4",
+"4	c #E17655",
+"5	c #DF7052",
+"6	c #DCE6F4",
+"7	c #DBE5F3",
+"8	c #C8D2DD",
+"9	c #84878A",
+"0	c #DD6A4E",
+"a	c #D9E5F3",
+"b	c #D8E4F3",
+"c	c #A3AAB1",
+"d	c #DB634A",
+"e	c #9A9FA5",
+"f	c #D6E4F3",
+"g	c #BCC6D2",
+"h	c #D85C46",
+"i	c #D65542",
+"j	c #D44E3E",
+"k	c #D1473A",
+"l	c #D5E3F3",
+"m	c #CCDBE9",
+"n	c #CF4036",
+"o	c #D3E3F2",
+"p	c #CBDAE9",
+"q	c #989FA5",
+"r	c #D2E2F2",
+"s	c #B8C5D2",
+"t	c #D0E1F2",
+"u	c #9FA8B1",
+"v	c #BFCEDC",
+"w	c #82868A",
+"x	c #CADBEB",
+"y	c #959DA4",
+"     .+@@+.     ",
+"   #$%&*=-;>#   ",
+"  ,')!~{]^/(_,  ",
+" #':!~<[[}|123# ",
+" $)!~{[45[16789 ",
+".%!~{][50[67abc.",
+"+&~<[[[0d[[[efg+",
+"@*{[450dhijk[lm@",
+"@=][50dhijkn[op@",
+"+-^}[[[ij[[[qrs+",
+".;/|16[jk[lortu.",
+" >(167[kn[ortvw ",
+" #_27ae[[qrtxy# ",
+"   38bflortvy,  ",
+"    9cgmpsuw#   ",
+"     .+@@+      "};
