@@ -169,6 +169,7 @@ enum
     PGM_FUNCTION,
     PGM_INDEX,
 	PGM_OPCLASS,
+	PGM_OPFAMILY,
     PGM_PRIMARYKEY,
 	PGM_ROLE,
     PGM_SCHEMA,
