@@ -2069,6 +2069,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\include\schema\pgOperatorFamily.h"
+					>
+				</File>
+				<File
 					RelativePath=".\include\schema\pgRole.h"
 					>
 				</File>
@@ -2215,6 +2219,10 @@
 			</File>
 			<File
 				RelativePath=".\schema\pgOperatorClass.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\schema\pgOperatorFamily.cpp"
 				>
 			</File>
 			<File
