@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-01-23 DP  1.8.0  Browser support for Operator Families in PstgreSQL 8.3.
 2007-01-22 DP  1.6.3  Handle non-default schema paths properly in the Foreign
                       Key dialogue, per Philipp Specht
 2007-01-19 DP  1.6.3  Fix localisation of 'Tab' as a copy delimiter.
